* Expanded options for rsf.user.ivlad.exe()

To programs:

* sfkdmig2d: 2-D Prestack Kirchhoff depth migration (borrowed from SU)
* wanttitle= option in thplot
* color=d periodic color table in grey and grey3
* sfin accepts data from standard input
* sfmath accepts sign() function

===Bug fixes===

In the reproducible documents collection:

In documentation:

In APIs:

* Fixed rsf_write to write complex-valued data

In the Python package:

In programs:

* Fixed parameter-setting bug in sfstoltstretch
* Fixed float-to-int truncation bug in sfdd triggered by Intel C Compiler 10
* Fixed large-file-support bug in sfshot2cmp

==Release 1.1 (2011-01-18)==

===Additions and enhancements===

To the reproducible documents collection:
* rsf/bash: Vladimir Bashkardin's presentation at Houston-2010 
* rsf/programming: Jeff Godwin's presentation at Houston-2010 
* rsf/usp: Yang Liu's presentation at Houston-2010
* \published{} macro added to all published papers
* sep/fractal: Modeling 3-D anisotropic fractal media (Chemingui)
* sep/banana: Traveltime sensitivity kernels: Banana-doughnuts or just plain bananas? (Rickett)
* swag/eikds: An eikonal based formulation for traveltime perturbation with respect to the source location (Alkhalifah and Fomel)
* cwp/geo2008IsotropicAngleDomainElasticRTM: Isotropic angle-domain elastic reverse-time migration (Yan and Sava)
* jsg/stackadcig: Stacking angle-domain common-image gathers for normalization of illumination (Liu et al.)
* cwp/geo2009VTIModeSeparation: Elastic wave-mode separation for VTI media (Yan and Sava)
* cwp/geo2009TTIModeSeparation: Elastic wave-mode separation for TTI media (Yan and Sava)
* jsg/flat: Predictive painting of 3-D seismic volumes (Fomel)
* jsg/oc3: OC-seislet: seislet transform construction with differential offset continuation (Liu and Fomel)
* sep/lines: Random lines in a plane (Claerbout) 